--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts tsc "
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts tsc ",
+    "typeorm" :"ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "pg": "^8.2.1",
     "ts-node-dev": "^1.0.0-pre.49",
+    "typeorm": "^0.2.25",
     "uuidv4": "^6.1.0"
   },
   "devDependencies": {
