--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-vars": [
+      "error", {
+        "argsIgnorePattern": "_"
+      }
+    ],
     "class-methods-use-this":"off",
     "import/extensions": [
       "error",
