--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,9 @@
   "username" : "postgres",
   "password" : "toor",
   "database" : "gobarber_gostack",
+  "entities" : [
+    "./src/models/*.ts"
+  ],
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
