--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts tsc ",
-    "typeorm" :"ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "migration:revert": "typeorm migration:revert"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.49",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "6.8.0",
