--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "prettier"
   ],
   "rules": {
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-unused-vars": [
       "error", {
         "argsIgnorePattern": "_"
