--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts tsc ",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts tsc ",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:revert": "typeorm migration:revert"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.49",
+    "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.0"
   },
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.5"
   }
 }
