--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
