--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 APP_SECRET=
+
 APP_WEB_URL=http://localhost:3000
+APP_API_URL=http://localhost:3333
+
+APP_MAIL_DRIVER=ethereal
+
+AWS_ACCESS_KEY_ID=alter_here_in_production
+AWS_SECRET_ACCESS_KEY=alter_here_in_production
+AWS_DEFAULT_REGION=alter_here_in_production
