--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "tdd": "jest --watch --verbose=true"
   },
   "dependencies": {
+    "aws-sdk": "^2.720.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.2",
+    "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
