add securing to application

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,21 @@
+# Application
 APP_SECRET=45523e699283ada07ce6aa0fc94a7b53
-
 APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3333
 
+
+# Mail
 APP_MAIL_DRIVER=ethereal
 
+# AWS
 AWS_ACCESS_KEY_ID=alter_here_in_production
 AWS_SECRET_ACCESS_KEY=alter_here_in_production
 AWS_BUCKET_S3=alter_here_in_production
 
+# Storage
 STORAGE_DRIVER=alter_here_in_production
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
